feat: users crud
